[gd_scene load_steps=4 format=3 uid="uid://cprnm6d5bh3f2"]

[ext_resource type="Script" path="res://Assets/UI/BasicControls/InventorySlot.gd" id="1_2qu3x"]
[ext_resource type="Texture2D" uid="uid://cke8lkljkb73" path="res://Assets/UI/Images/Background/Widgets/progressbar_fill.png" id="2_ckrin"]
[ext_resource type="Texture2D" uid="uid://ci64i0ra5lm7" path="res://Assets/UI/Images/Background/inv_bg.png" id="2_hdugx"]

[node name="InventorySlot" type="TextureButton"]
custom_minimum_size = Vector2(49, 51)
offset_right = 49.0
offset_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("2_hdugx")
stretch_mode = 0
script = ExtResource("1_2qu3x")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 49.0
offset_bottom = 51.0
theme_override_constants/separation = 0

[node name="ResourceImage" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Spacer" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AmountLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmountBar" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("2_ckrin")
expand_mode = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
